Spacing on bottom buttons corrected

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body {
   background-color: white;
   height: 20px;
   width: 210px;
-  margin: 4px 2px;
+  margin: 4px 15px;
   border: 2px solid black;
   color: black;
   padding: 5px 20px 5px 5px;
@@ -90,9 +90,8 @@ body {
   text-align: center;
   text-decoration: none;
   position: absolute;
-  bottom: -10;
-  right: 17%;
-  margin: 4px 2px;
+  right: 15%;
+  margin: 4px 1px;
   cursor: pointer;
   border-radius: 50%;
   transition: transform 0.3s;
@@ -107,8 +106,7 @@ body {
   text-align: center;
   text-decoration: none;
   position: absolute;
-  bottom: -10;
-  right: 5%;
+  right: 3%;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 50%;
